2007-07-30 sstein <sstein@geo.unizh.ch>

	* added fix by Malte to avoid null-pointer excpetion when making a copy of a 
	  FeatureCollection containing Features with null values for attributes. 
	  (see jpp-devel email send by sstein on 24.July.2007) 
	
	* replaced jmat_5.0.jar by the cleaned up version jmat_5.0m.jar wich does only
	  contain the org.jmat packages. Additionally the start-up scripts (.sh, .bat) have 
	  been updated 

2007-07-13 mmichaud <michael.michaud@free.fr>

    * Bug fix in LabelStyle : added trim() to avoid labels to be ex-centered
    
    * Bug fix : thick closed lines (and polygons) did not have a nice
      join_bevel on the first/last point (tip from Larry Becker)

2007-07-11 Paul Austin <paul.austin@revolsys.com>
  * Added .settings, build, target, .classpath & .project to svi:ignore to
    prevent accidental checkin of eclipse config and maven/ant generated dirs
  * Changed InfoModel to remove layers after the listeners are notified

2007-07-09 Andreas Schmitz <schmitz@lat-lon.de>
		* scripts/openjump.sh: Added improved startup script for Unix from Paul
	  Austin.

2007-07-08 mmichaud <michael.michaud@free.fr>

    * Add UnionByAttributePlugIn in the Tool/Analysis menu
    
    * Remove several plugins related to loading/saving files and which are
    no more useful (two plugins in the workbench.ui.plugin package and
    two other plugins in the datasource package)
    
    * Add automatic file extension in the main SaveDatasetAsPlugIn
    and put the format chooser at the bottom of the dialog (as in SkyJUMP)

2007-07-03 mmichaud <michael.michaud@free.fr>
    * Simple query PlugIn : add some keys in the language property files
    in order to replace gnof, bnof, snof and nnof by an empty string in
    the user interface of Simple Query (xnof means 'no function' for data
    type x).

2007-07-02  Andreas Schmitz <schmitz@lat-lon.de>
    * src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,